# mecagent-technical-test

./: REFLECTIONS.md  good_luck.ipynb  main.py  pyproject.toml
