[project]
name = "mecagent-technical-test"
version = "0.1.0"
description = "Just a technical test"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cadquery>=2.5.2",
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "pillow>=11.2.1",
    "salesforce-lavis",
    "scipy>=1.15.3",
    "tokenizers>=0.15.0",
    "trimesh>=4.6.11",
]
